--- a/LOLWildRift.Service/appsettings.json
+++ b/LOLWildRift.Service/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "API-KEY": "df993a8c-f507-428d-9499-ef06f4c35664"
 }
