--- a/LOLWildRift.Service/appsettings.json
+++ b/LOLWildRift.Service/appsettings.json
@@ -7,5 +7,10 @@
     }
   },
   "AllowedHosts": "*",
-  "API-KEY": "df993a8c-f507-428d-9499-ef06f4c35664"
+  "Auth": {
+    "API-KEY": "df993a8c-f507-428d-9499-ef06f4c35664",
+    "Username": "LOL",
+    "Password": "WildRift"
+  }
+  
 }
