Api load connectionStrings from appsetting.cs

--- a/LOLWildRift.Service/appsettings.json
+++ b/LOLWildRift.Service/appsettings.json
@@ -11,6 +11,9 @@
     "API-KEY": "df993a8c-f507-428d-9499-ef06f4c35664",
     "Username": "LOL",
     "Password": "WildRift"
+  },
+  "ConnectionStrings": {
+    "LOLWildRiftDB": "server=DESKTOP-8U7EVMH\\SQLEXPRESS;database=LOL_WILD_RIFT_DB;trusted_connection=true;"
   }
-  
+
 }
